# xc-similarity

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc  README.md
include/: DocStructure.h  Exception.h  ExprFactory.h  Flattened2.h  Interval.h  errors.h  smartptr.h  utils.h  xml-utils.h
src/: DiffToAMPL.cpp  DocStructure.cpp  Flattened2.cpp  Interval.cpp  XMLSimilarity.cpp  newdiff.cpp  utils.cpp  xml-utils.cpp
